Admin portal edit part changes

--- a/project1/webapp/view/AdminDetails.view.xml
+++ b/project1/webapp/view/AdminDetails.view.xml
@@ -327,35 +327,192 @@
                     class="customPanelHeader"
                 >
                     <f:SimpleForm
-                        editable="false"
+                        id="idsimplePersonalDetails"
+                        busyIndicatorDelay="0"
+                        editable="true"
                         layout="ColumnLayout"
-                        columnsM="1"
-                        columnsL="2"
-                        columnsXL="2"
-                        labelSpanXL="4"
+                        labelSpanXL="2"
                         labelSpanL="3"
-                        labelSpanM="4"
+                        labelSpanM="2"
                         labelSpanS="12"
+                        adjustLabelSpan="false"
+                        emptySpanXL="0"
+                        emptySpanL="0"
+                        emptySpanM="0"
+                        emptySpanS="0"
+                        columnsXL="3"
+                        columnsL="2"
+                        columnsM="2"
+                        singleContainerFullSize="false"
                     >
                         <!-- Personal Information -->
                         <f:content>
                             <core:Title text="" />
                             <Label text="Full Name" />
-                            <Text text="{CustomerData>/CustomerName}" />
+                             <Text
+                                text="{CustomerData>/Salutation}"
+                                visible="{= !${VisibleModel>/visible} }"
+                            />
+                            <Text
+                                text="{CustomerData>/CustomerName}"
+                                visible="{= !${VisibleModel>/visible} }"
+                            />
+                               <Select
+                                selectedKey="{Bookingmodel>/Salutation}"
+                                visible="{VisibleModel>/visible}"
+                            >
+                                <core:Item
+                                    key="Mr."
+                                    text="Mr."
+                                />
+                                <core:Item
+                                    key="Mrs."
+                                    text="Mrs."
+                                />
+                              
+                            </Select>
+                            <Input
+                                value="{Bookingmodel>/CustomerName}"
+                                maxLength="50"
+                                visible="{VisibleModel>/visible}"
+                            />
                             <Label text="Date of Birth" />
-                            <Text text="{CustomerData>/DateOfBirth}" />
+                            <Text
+                                text="{CustomerData>/DateOfBirth}"
+                                visible="{= !${VisibleModel>/visible} }"
+                            />
+                            <DatePicker
+                                value="{Bookingmodel>/DateOfBirth}"
+                                displayFormat="dd/MM/yyyy"
+                                valueFormat="dd/MM/yyyy"
+                                visible="{VisibleModel>/visible}"
+                            />
                             <Label text="Gender" />
-                            <Text text="{CustomerData>/Gender}" />
-                            <Label text="Mobile Number" />
-                            <Text text="{CustomerData>/MobileNo}" />
+                            <Text
+                                text="{CustomerData>/Gender}"
+                                visible="{= !${VisibleModel>/visible} }"
+                            />
+                            <ComboBox
+                                selectedKey="{Bookingmodel>/Gender}"
+                                visible="{VisibleModel>/visible}"
+                            >
+                                <core:Item
+                                    key="Male"
+                                    text="Male"
+                                />
+                                <core:Item
+                                    key="Female"
+                                    text="Female"
+                                />
+                                <core:Item
+                                    key="Other"
+                                    text="Other"
+                                />
+                            </ComboBox>
+
                             <Label text="Email" />
-                            <Text text="{CustomerData>/CustomerEmail}" />
+                            <Text
+                                text="{CustomerData>/CustomerEmail}"
+                                visible="{= !${VisibleModel>/visible} }"
+                            />
+                            <Input
+                                value="{Bookingmodel>/CustomerEmail}"
+                                type="Email"
+                                maxLength="50"
+                                visible="{VisibleModel>/visible}"
+                            />
                             <Label text="Country" />
-                            <Text text="{CustomerData>/Country}" />
+                            <Text
+                                text="{CustomerData>/Country}"
+                                visible="{= !${VisibleModel>/visible} }"
+                            />
+                            <ComboBox
+                                id="CC_id_Country"
+                                change="MC_onChangeCountry"
+                                placeholder="Enter Country"
+                                valueStateText="Select Country"
+                                items="{path:'CountryModel>/',length:1000}"
+                                selectedKey="{Bookingmodel>/Country}"
+                                showSecondaryValues="true"
+                                visible="{VisibleModel>/visible}"
+                                selectionChange="onCountrySelectionChange"
+                            >
+                                <core:ListItem
+                                    key="{CountryModel>countryName}"
+                                    text="{CountryModel>countryName}"
+                                    additionalText="{CountryModel>code}"
+                                />
+                            </ComboBox>
+
                             <Label text="State" />
-                            <Text text="{CustomerData>/State}" />
+                            <Text
+                                text="{CustomerData>/State}"
+                                visible="{= !${VisibleModel>/visible} }"
+                            />
+                            <ComboBox
+                                id="CC_id_State"
+                                change="CC_onChangeState"
+                                placeholder="Enter State"
+                                valueStateText="Select State"
+                                items="{path:'StateModel>/',length:1000}"
+                                selectedKey="{Bookingmodel>/State}"
+                                showSecondaryValues="true"
+                                visible="{VisibleModel>/visible}"
+                            >
+                                <core:ListItem
+                                    key="{StateModel>stateName}"
+                                    text="{StateModel>stateName}"
+                                />
+                            </ComboBox>
                             <Label text="City" />
-                            <Text text="{CustomerData>/City}" />
+                            <Text
+                                text="{CustomerData>/City}"
+                                visible="{= !${VisibleModel>/visible} }"
+                            />
+                            <ComboBox
+                                id="CC_id_City"
+                                change="MC_onChangeCity"
+                                valueStateText="Select City"
+                                placeholder="Enter City"
+                                items="{path:'CityModel>/',length:1000}"
+                                selectedKey="{Bookingmodel>/City}"
+                                showSecondaryValues="true"
+                                visible="{VisibleModel>/visible}"
+                            >
+                                <core:ListItem
+                                    key="{CityModel>cityName}"
+                                    text="{CityModel>cityName}"
+                                    additionalText="{CityModel>branchCode}"
+                                />
+                            </ComboBox>
+                            <Label text="Mobile Number" />
+                              <Text
+                                text="{CustomerData>/STDCode}"
+                                visible="{= !${VisibleModel>/visible} }"
+                                width="30px"
+                            />
+                            <Text
+                                text="{CustomerData>/MobileNo}"
+                                visible="{= !${VisibleModel>/visible} }"
+                            />
+                            <Input
+                                id="CC_id_STDCode"
+                                value="{Bookingmodel>/STDCode}"
+                                editable="false"
+                                visible="{VisibleModel>/visible}"
+                            />  
+
+                            <!-- Phone Number -->
+                            <Input
+                                id="CD_ID_idPhone"
+                                value="{Bookingmodel>/MobileNo}"
+                                placeholder="Enter Contact Number"
+                                maxLength="10"
+                                liveChange="onPhoneInputLiveChange"
+                                valueStateText="Enter Contact Number"
+                                type="Number"
+                                visible="{VisibleModel>/visible}"
+                            />
                         </f:content>
                     </f:SimpleForm>
                     <FlexBox
