--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -1594,3 +1594,12 @@ span.sapMBtnInner.sapMBtnEmphasized {
 .detailsContainer {
   padding: 10px 16px;
 }
+
+.squareVideo {
+  width: 100%;
+  max-width: 300px;
+  max-height: 300px;
+  border: 2px solid #000;
+  border-radius: 5px;
+  object-fit: cover;
+}
